--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="login-wrapper">
-        <img class="companyLogo" src="../../assets/dog blue logo.png" alt="">
+        <!--<img class="companyLogo" src="../../assets/dog blue logo.png" alt="">-->
         <div class="alert alert-danger" role="alert" *ngIf="invalidLogin">
           Invalid username and/or password.
         </div>
