--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,8 @@
 
 @import '~normalize.css/normalize.css';
 
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
 
 
 * {
@@ -59,7 +61,7 @@ body {
 }
 
 /* Firefox hack */
-@-moz-document url-prefix() { 
+@-moz-document url-prefix() {
     .star-icon:before {
         top: -9px !important;
     }
@@ -71,3 +73,17 @@ body {
     padding: 0 25px!important;
     margin: 0px!important;
    }
+
+/*ng-select component*/
+ng-select {
+  background-color: #ffffff !important;
+}
+
+ng-select div {
+  border-radius: .2rem !important;
+  font-size: .875rem !important;
+}
+
+ng-select > div > div.single > div.clear, ng-select > div > div.single > div.toggle {
+  color: #000000 !important;
+}
