--- a/src/app/components/feedback-filters/feedback-filters.component.html
+++ b/src/app/components/feedback-filters/feedback-filters.component.html
@@ -1,108 +1,55 @@
-<div class="ratingTotalAndFiltersWrapper">
-  <div class="ratingScoreWrapper">
-    <div class="totalScore">4.5</div>
-    <ngb-rating [rate]="4.5" [starTemplate]="t" [readonly]="true" max="5">
-      <ng-template #t let-fill="fill">
-        <span class="star" [class.full]="fill === 100">
-          <span class="half" [style.width.%]="fill">&#9733;</span>&#9733;
-        </span>
-      </ng-template>
-    </ngb-rating>
-    <p class="averageRatingLabel text-muted">Average Rating</p>
-  </div>
-
-  <div class="ratingBars">
-    <p>
-      <ngb-progressbar type="info" [value]="59" [max]="100" height="20px"></ngb-progressbar>
-    </p>
-    <p>
-      <ngb-progressbar type="info" [value]="31" [max]="100" height="20px"></ngb-progressbar>
-    </p>
-    <p>
-      <ngb-progressbar type="info" [value]="9" [max]="100" height="20px"></ngb-progressbar>
-    </p>
-    <p>
-      <ngb-progressbar type="info" [value]="1" [max]="100" height="20px"></ngb-progressbar>
-    </p>
-    <p>
-      <ngb-progressbar type="info" [value]="0" [max]="100" height="20px"></ngb-progressbar>
-    </p>
-  </div>
-
-  <div class="starRatingScale">
-
-    <div>
-      <ngb-rating [rate]="5" [starTemplate]="t5" [readonly]="true" max="5">
-        <ng-template #t5 let-fill="fill">
-          <span class="star" [class.full]="fill === 100">&#9733;</span>
-        </ng-template>
-      </ngb-rating>
-      <span class="percentage">59%</span>
-    </div>
-
-    <div>
-      <ngb-rating [rate]="4" [starTemplate]="t4" [readonly]="true" max="5">
-        <ng-template #t4 let-fill="fill">
-          <span class="star" [class.full]="fill === 100">&#9733;</span>
-        </ng-template>
-      </ngb-rating>
-      <span class="percentage">31%</span>
-    </div>
-
-    <div>
-      <ngb-rating [rate]="3" [starTemplate]="t3" [readonly]="true" max="5">
-        <ng-template #t3 let-fill="fill">
-          <span class="star" [class.full]="fill === 100">&#9733;</span>
-        </ng-template>
-      </ngb-rating>
-      <span class="percentage">9%</span>
-    </div>
-
-    <div>
-      <ngb-rating [rate]="2" [starTemplate]="t2" [readonly]="true" max="5">
-        <ng-template #t2 let-fill="fill">
-          <span class="star" [class.full]="fill === 100">&#9733;</span>
-        </ng-template>
-      </ngb-rating>
-      <span class="percentage">1%</span>
-    </div>
-
-    <div>
-      <ngb-rating [rate]="1" [starTemplate]="t1" [readonly]="true" max="5">
-        <ng-template #t1 let-fill="fill">
-          <span class="star" [class.full]="fill === 100">&#9733;</span>
-        </ng-template>
-      </ngb-rating>
-      <span class="percentage">&lt; 1%</span>
-    </div>
-  </div>
-
-</div>
-
 <div>
-  <label>Filter By</label>
-  <div class="filters">
 
-    <ng-select [searchable]="false" [clearable]="false" [(ngModel)]=starRatings>
-      <ng-option value="ALL">All Stars</ng-option>
-      <ng-option value="5">5 star only</ng-option>
-      <ng-option value="4">4 star only</ng-option>
-      <ng-option value="3">3 star only</ng-option>
-      <ng-option value="2">2 star only</ng-option>
-      <ng-option value="1">1 star only</ng-option>
-    </ng-select>
+  <div class="ratingTotalAndFiltersWrapper">
+    <div>
+      <div class="ratingScoreWrapper">
+        <div class="totalScore">{{averageScore | number: '1.2-2'}}</div>
+        <ngb-rating [rate]="averageScore | number: '1.2-2'" [starTemplate]="t" [readonly]="true" max="5">
+          <ng-template #t let-fill="fill">
+            <span class="star" [class.full]="fill === 100">
+              <span class="half" [style.width.%]="fill">&#9733;</span>&#9733;
+            </span>
+          </ng-template>
+        </ngb-rating>
+        <p class="reviewsRatingLabel text-muted">({{totalReviews}} Reviews)</p>
+      </div>
 
-    <ng-select [searchable]="false" [clearable]="false" [(ngModel)]="reviewRatings">
-      <ng-option value="LIKE">What customer liked</ng-option>
-      <ng-option value="DISLIKE">What customer disliked</ng-option>
-      <ng-option value="ADVICE">Advice for agent</ng-option>
-      <ng-option value="PURCHASE">Reason for purchase/non-purchase</ng-option>
-    </ng-select>
+      <div class="ratingBarAndStarsWrapper">
+        <div *ngFor="let total of totalPercentages">
+          <div class="ratingBarAndStarsChildWrapper">
+            <div class="ratingBars">
+              <ngb-progressbar type="info" [value]="total.percentage * 100" [max]="100" height="20px"></ngb-progressbar>
+            </div>
+            <div class="starRatingScale">
+              <ngb-rating [rate]="total.score" [starTemplate]="t" [readonly]="true" max="5">
+                <ng-template #t let-fill="fill">
+                  <span class="star" [class.full]="fill === 100">&#9733;</span>
+                </ng-template>
+              </ngb-rating>
+              <span (click)="onPercentClick(total.score.toString())" class="percentage">{{total.percentage | percent}}</span>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <ng-select [searchable]="false" [clearable]="false" [(ngModel)]="timeSort">
-      <ng-option value="NEW">Newest</ng-option>
-      <ng-option value="OLD">Oldest</ng-option>
-    </ng-select>
+    </div>
 
+    <div class="filtersWrapper">
+      <label>Filter By</label>
+      <div class="filters">
+        <ng-select [searchable]="false" [clearable]="false" [(ngModel)]=ratingSort (change)="onChangeRatingSort($event)">
+          <ng-option value="1,2,3,4,5">All Stars</ng-option>
+          <ng-option value=5>5 star only</ng-option>
+          <ng-option value=4>4 star only</ng-option>
+          <ng-option value=3>3 star only</ng-option>
+          <ng-option value=2>2 star only</ng-option>
+          <ng-option value=1>1 star only</ng-option>
+        </ng-select>
+        <ng-select [searchable]="false" [clearable]="false" [(ngModel)]="dateSort" (change)="onChangeDateSort($event)">
+          <ng-option value="DESC">Newest</ng-option>
+          <ng-option value="ASC">Oldest</ng-option>
+        </ng-select>
+      </div>
+    </div>
   </div>
 </div>
