--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -12,7 +12,7 @@
     </small>
   </div><hr>
 
-  <div class="form-group">
+  <div class="form-group" style="margin-left: 20px">
     <label class="form-check-label" for="changePassword">
       <input type="checkbox" class="form-check-input" id="changePassword" (change)="changePasswordChecked($event)">
       Change Password
