--- a/src/app/components/review-card/review-card.component.css
+++ b/src/app/components/review-card/review-card.component.css
@@ -3,16 +3,16 @@ a {
 }
 
 * {
-    font-size: 15px;
+    font-size: 13px;
 }
-
+/* 
 .mat-card-title {
     font-size: 20px;
     margin-right: 5px;
     color: #FDC341;
     font-weight: bold;
     display: inline;
-}
+} */
 
 .row {
     display: flex;
@@ -32,6 +32,32 @@ a {
 }
 
 ::ng-deep .mat-tab-body {
-    height: 130px;
-    padding: 20px;
+    height: 150px;
+    /* padding: 20px; */
+}
+
+::ng-deep .mat-card-title {
+    margin: 0px !important;
+}
+
+
+
+ /* --------------------------------------- */
+
+
+.star {
+    font-size: 1 rem;
+    color: #b0c4de;
+    position: relative;  
+    display: inline-block;
+}
+
+.full {
+    color: #FDC341;
+}
+.half {
+    position: absolute;
+    display: inline-block;
+    overflow: hidden;
+    color: #FDC341;
 }
