--- a/src/app/components/charts/dashboard-cards/dashboard-cards.component.html
+++ b/src/app/components/charts/dashboard-cards/dashboard-cards.component.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
       <div class="card">
         <i class="fa fa-list-alt" aria-hidden="true"></i>
-        <div class="media-body" style="text-align: right;">
+        <div class="media-body">
           <h4>37</h4>
           <span>Total Reviews</span>
         </div>
@@ -12,7 +12,7 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
       <div class="card">
         <i class="fa fa-star" aria-hidden="true"></i>
-        <div class="media-body" style="text-align: right;">
+        <div class="media-body">
           <h4>3.57</h4>
           <span>Average Score</span>
         </div>
@@ -21,7 +21,7 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
       <div class="card">
         <i class="fa fa-users" aria-hidden="true"></i>
-        <div class="media-body" style="text-align: right;">
+        <div class="media-body">
           <h4>#7</h4>
           <span>Team Rank</span>
         </div>
@@ -30,7 +30,7 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
       <div class="card">
         <i class="fa fa-building" aria-hidden="true"></i>
-        <div class="media-body" style="text-align: right;">
+        <div class="media-body">
           <h4>#23</h4>
           <span>Company Rank</span>
         </div>
