--- a/src/app/components/charts/feedback-chart/feedback-chart.component.css
+++ b/src/app/components/charts/feedback-chart/feedback-chart.component.css
@@ -1,9 +1,13 @@
-.chartWrapper {
+.card {
     /* margin-bottom: 20px; */
     padding: 10px;
     height: 280px;
     width: 100%;
     background-color: #FFFFFF;
+
+    border: 0 solid #e7e7e7;
+    border-radius: 5px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 }
 
 .innerChartWrapper {
