--- a/src/app/components/charts/feedback-chart/feedback-chart.component.html
+++ b/src/app/components/charts/feedback-chart/feedback-chart.component.html
@@ -1,4 +1,4 @@
-<div class="chartWrapper">
+<div class="card">
     <div class="row chartTitleBar">
         <div class="col-md-6">
             <span class="chartTitle">Customer Feedback</span>
