--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -1,4 +1,4 @@
-<mat-card class="leaderboardWrapper">
+<div class="card">
 <div class="example-container">
     <div class="example-header">
         <mat-card-title>Leaderboard</mat-card-title>
@@ -44,4 +44,4 @@
 
   </div>
 
-</mat-card>
+</div>
