--- a/src/app/components/leaderboard/leaderboard.component.css
+++ b/src/app/components/leaderboard/leaderboard.component.css
@@ -1,42 +1,28 @@
+* {
+  font-size: 14px;
+}
+
 .card {
   margin-bottom: 20px;
-  padding: 0;
-  overflow: scroll;
-
+  padding: 20px;
   border: 0 solid #e7e7e7;
   border-radius: 5px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 }
 
-.example-container {
-  display: flex;
-  flex-direction: column;
+.card-body {
+  padding: 0;
 }
 
-.mat-table {
-  overflow: scroll;
+.table {
+  margin-bottom: 0;
 }
 
-.mat-header-cell.mat-sort-header-sorted {
-  color: black;
+.table > thead > tr > th {
+  border-bottom: 1px solid #e7e7e7;
+  font-weight: 400;
 }
 
-.example-header {
-  min-height: 64px;
-  padding: 8px 24px 0;
-}
-
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
-}
-
-.mat-card-title {
-  margin: 0;
-  font-size: 18px;
-  text-align: center;
-}
-
-.mat-form-field input {
-  margin: 0;
+tbody tr td {
+  color: #99abb4;
 }
