--- a/src/app/components/leaderboard/leaderboard.component.css
+++ b/src/app/components/leaderboard/leaderboard.component.css
@@ -3,11 +3,11 @@
 }
 
 .card {
-  margin-bottom: 20px;
   padding: 20px;
   border: 0 solid #e7e7e7;
   border-radius: 5px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+  height: 100%;
 }
 
 .card-body {
