--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,10 +5,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 feedback">
             <app-feedback-chart></app-feedback-chart>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 leaderboard">
             <app-leaderboard></app-leaderboard>
         </div>
     </div>
