--- a/src/app/components/charts/feedback-chart/feedback-chart.component.html
+++ b/src/app/components/charts/feedback-chart/feedback-chart.component.html
@@ -9,6 +9,8 @@
             [results]="single"
             [xAxis]="showXAxis"
             [yAxis]="showYAxis"
+            yScaleMin=0
+            yScaleMax=5
             [autoScale]="autoScale"
             (select)="onSelect($event)">
         </ngx-charts-line-chart>
