remove unused sidenav menus and logo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-wrapper">
-  <a href="" class="company-logo"><img src="../../assets/First_Impression_302.png" alt=""></a>
+  <a href="" class="company-logo"><img src="" alt=""></a>
   <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon>
 
   <button mat-button [matMenuTriggerFor]="menu">
