--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-wrapper">
   <a href="" class="company-logo"><img src="" alt=""></a>
-  <!-- <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon> -->
+  <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon>
 
   <button mat-button [matMenuTriggerFor]="menu">
     {{user?.firstName}} {{user?.lastName}}
